--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,97 @@
-.App {
-  text-align: center;
+h1 {
+  font-size: 3rem;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h2 {
+  font-size: 2rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h4 {
+  font-size: 1rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.material-icons:hover {
+  cursor: pointer;
+}
+
+.nav__bar {
+  background-color: grey;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: space-between;
+  width: 100%;
+}
+
+.nav__heading,
+.nav__link {
+  padding-left: 1rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  padding-right: 1rem;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.paginationBttns {
+  width: 80%;
+  height: 40px;
+  list-style: none;
+  display: flex;
+  justify-content: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.paginationBttns a {
+  padding: 10px;
+  margin: 8px;
+  border-radius: 5px;
+  border: 1px solid #64b5f6;
+  color: #64b5f6;
+  cursor: pointer;
+}
+
+.paginationBttns a:hover {
+  color: white;
+  background-color: #64b5f6;
+}
+
+.paginationActive a {
+  color: white;
+  background-color: #64b5f6;
+}
+
+.paginationDisabled a {
+  color: black;
+  background-color: white;
+}
+
+.App {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 100vw;
+}
+/* For mobile phones */
+@media (max-width: 575px) {
+  h2 {
+    font-size: 15px;
   }
-  to {
-    transform: rotate(360deg);
+
+  h4 {
+    font-size: 10px;
+  }
+
+  .nav__heading {
+    font-size: 20px;
+    padding-left: 1rem;
+    padding-top: 1rem;
+    padding-bottom: 2rem;
+    padding-right: 1rem;
+    color: white;
+  }
+
+  .nav__link button {
+    padding-bottom: 1rem;
+
+    font-size: 10px;
   }
 }
